crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__teleport_indexed_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { createComponent as _createComponent, VaporTeleport as _VaporTeleport, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<span> </span>")
const t1 = _template("<span>fallback</span>")

export function render(_ctx) {
  const n5 = _createComponent(_VaporTeleport, {
    to: () => (_ctx.targets[_ctx.selected]),
    defer: () => (_ctx.deferred)
  }, {
    "default": () => {
      const n0 = _createIf(() => (_ctx.visible), () => {
        const n2 = t0()
        const x2 = _txt(n2)
        _renderEffect(() => _setText(x2, _toDisplayString(_ctx.value)))
        return n2
      }, () => {
        const n4 = t1()
        return n4
      })
      return n0
    }
  }, true)
  return n5
}
