crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__teleport_indexed_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"span> </\" -> \"span v-i\"",
    "2:23 \"span>fal\" -> \"span v-e\"",
    "2:28 \"fallback\" -> \"fallback\"",
    "4:0 \"export f\" -> \"<Telepor\"",
    "10:17 \"_createI\" -> \"<span v-\"",
    "10:34 \"_ctx.vis\" -> \"visible\\\"\" [visible]",
    "13:58 \"_ctx.val\" -> \"value }}\" [value]",
    "15:9 \"() => {⏎\" -> \"<span v-\"",
]
