crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__teleport_reactive_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { createComponent as _createComponent, VaporTeleport as _VaporTeleport, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<span> </span>")

export function render(_ctx) {
  const n1 = _createComponent(_VaporTeleport, {
    to: () => (_ctx.target),
    disabled: () => (_ctx.disabled),
    defer: () => ("")
  }, {
    "default": () => {
      const n0 = t0()
      const x0 = _txt(n0)
      _renderEffect(() => _setText(x0, _toDisplayString(_ctx.label)))
      return n0
    }
  }, true)
  return n1
}
