crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__teleport_reactive_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"span> </\" -> \"span>{{ \"",
    "3:0 \"export f\" -> \"<Telepor\"",
    "12:56 \"_ctx.lab\" -> \"label }}\" [label]",
]
