crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__teleport_static_code.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: code
---
import { createComponent as _createComponent, VaporTeleport as _VaporTeleport, template as _template } from 'vue';
const t0 = _template("<div>content</div>")

export function render(_ctx) {
  const n1 = _createComponent(_VaporTeleport, { to: () => ("body") }, {
    "default": () => {
      const n0 = t0()
      return n0
    }
  }, true)
  return n1
}
