crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests_source_map__teleport_static_map.snap
---
source: crates/vize_atelier_vapor/src/tests_source_map.rs
expression: segments
---
[
    "1:23 \"div>cont\" -> \"div>cont\"",
    "1:27 \"content<\" -> \"content<\"",
    "3:0 \"export f\" -> \"<Telepor\"",
]
